--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
 .header{
     background-color:black ;
     padding: 4px;
-    width: 1349px;
+    width: 1220px;
     height: 70px;
     margin: 0px;
 }
@@ -29,8 +29,8 @@ body{
     display: flex;
 }
 .header .header-nav .header-container{
-    width:1000px ;
-    height: 70px;
+    width:1100px ;
+    height: auto;
     display: flex;
     justify-content:flex-start ;
     align-items: center;
@@ -62,8 +62,8 @@ body{
     font-family:  dancing script;
 }
 .header .header-nav .header-container2{
-    width:50px ;
-    height: 200px;
+    width:350px ;
+    height: 100px;
     display: flex;
     justify-content:space-between ;
     align-items: center;
@@ -139,7 +139,7 @@ body{
     transform: scale(1.2);
 }
 .section-1{
-    width: 1339px;
+    width: 1220px;
     height: auto;
     justify-content: space-evenly;
     padding: 0px;
@@ -194,7 +194,7 @@ body{
 }
 
 .section-2 {
-    width: 1339px;
+    width: 1220px;
     height: 200px;
     justify-content: space-evenly;
     padding: 0px;
@@ -266,7 +266,7 @@ body{
     cursor: pointer; 
  }
 .section-3{
-    width: 1339px;
+    width: 1220px;
     height: 900px;
     justify-content: space-evenly;
     padding: 0px;
@@ -332,7 +332,7 @@ text-align: center;
     
 }
 .section-4 {
-    width: 1339px;
+    width: 1100px;
     height: 25px;
     justify-content: space-evenly;
     padding: 0px;
@@ -354,7 +354,7 @@ text-align: center;
     top:1830px
 }
 .section-5{
-    width: 1339px;
+    width: 1228px;
     height:500px;
     justify-content: center;
     padding: 0px;
@@ -436,7 +436,7 @@ text-align: center;
 }
 .footer{
     background-color: whitesmoke;
-    width: 1339px ;
+    width: 1180px ;
     height: 500px;
     margin: 0px;
     padding: 20px;
